@@ -2,7 +2,8 @@
  * 
  * libmsvg, a minimal library to read and write svg files
  *
- * Copyright (C) 2010, 2020 Mariano Alvarez Fernandez (malfer at telefonica.net)
+ * Copyright (C) 2010, 2020-2023 Mariano Alvarez Fernandez
+ * (malfer at telefonica.net)
  *
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
@@ -29,7 +30,7 @@
 #include <string.h>
 #include "msvg.h"
 
-int MsvgAddContent(MsvgElement *el, int len, char *cnt)
+int MsvgAddContent(MsvgElement *el, int len, const char *cnt)
 {
     MsvgContent *pcnt;
     int olen, nlen;
