@@ -2,7 +2,7 @@
  * 
  * libmsvg, a minimal library to read and write svg files
  * 
- * Copyright (C) 2010, 2020-2022 Mariano Alvarez Fernandez
+ * Copyright (C) 2010, 2020-2023 Mariano Alvarez Fernandez
  * (malfer at telefonica.net)
  *
  * Permission is hereby granted, free of charge, to any person obtaining
@@ -120,6 +120,9 @@ static void MsvgFreeElement(MsvgElement *el)
             if (el->pglyphattr->sp) MsvgDestroySubPath(el->pglyphattr->sp);
             free(el->pglyphattr);
             break;
+        case EID_TITLE :
+        case EID_DESC :
+        case EID_V_COMMENT :
         case EID_V_CONTENT :
             break;
         default :
