@@ -2,7 +2,7 @@
  * 
  * libmsvg, a minimal library to read and write svg files
  *
- * Copyright (C) 2010, 2020-2022 Mariano Alvarez Fernandez
+ * Copyright (C) 2010, 2020-2023 Mariano Alvarez Fernandez
  * (malfer at telefonica.net)
  *
  * Permission is hereby granted, free of charge, to any person obtaining
@@ -39,13 +39,15 @@ typedef struct {
 } MsvgIdElement;
 
 static MsvgIdElement supported_elements[] = {
-    {EID_SVG, "svg", 0, 0, 11, {EID_DEFS, EID_G, EID_USE, EID_RECT, EID_CIRCLE,
-        EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH, EID_TEXT} },
-    {EID_DEFS, "defs", 0, 0, 12, {EID_G, EID_RECT, EID_CIRCLE, EID_ELLIPSE, EID_LINE,
+    {EID_SVG, "svg", 0, 0, 14, {EID_DEFS, EID_G, EID_USE, EID_RECT, EID_CIRCLE,
+        EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH, EID_TEXT,
+        EID_TITLE, EID_DESC, EID_V_COMMENT} },
+    {EID_DEFS, "defs", 0, 0, 15, {EID_G, EID_RECT, EID_CIRCLE, EID_ELLIPSE, EID_LINE,
         EID_POLYLINE, EID_POLYGON, EID_PATH, EID_TEXT, EID_LINEARGRADIENT,
-        EID_RADIALGRADIENT, EID_FONT} },
-    {EID_G, "g", 0, 0, 11, {EID_DEFS, EID_G, EID_USE, EID_RECT, EID_CIRCLE,
-        EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH, EID_TEXT} },
+        EID_RADIALGRADIENT, EID_FONT, EID_TITLE, EID_DESC, EID_V_COMMENT} },
+    {EID_G, "g", 0, 0, 14, {EID_DEFS, EID_G, EID_USE, EID_RECT, EID_CIRCLE,
+        EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH, EID_TEXT,
+        EID_TITLE, EID_DESC, EID_V_COMMENT} },
     {EID_USE, "use", 0, 0, 0},
     {EID_RECT, "rect", 0, 0, 0},
     {EID_CIRCLE, "circle", 0, 0, 0},
@@ -58,10 +60,14 @@ static MsvgIdElement supported_elements[] = {
     {EID_LINEARGRADIENT, "linearGradient", 0, 0, 1, {EID_STOP} },
     {EID_RADIALGRADIENT, "radialGradient", 0, 0, 1, {EID_STOP} },
     {EID_STOP, "stop", 0, 0, 0},
-    {EID_FONT, "font", 0, 0, 3, {EID_FONTFACE, EID_MISSINGGLYPH, EID_GLYPH} },
+    {EID_FONT, "font", 0, 0, 6, {EID_FONTFACE, EID_MISSINGGLYPH, EID_GLYPH,
+        EID_TITLE, EID_DESC, EID_V_COMMENT} },
     {EID_FONTFACE, "font-face", 0, 0, 0},
     {EID_MISSINGGLYPH, "missing-glyph", 0, 0, 0},
     {EID_GLYPH, "glyph", 0, 0, 0},
+    {EID_TITLE, "title", 1, 0, 1, {EID_V_CONTENT} },
+    {EID_DESC, "desc", 1, 0, 1, {EID_V_CONTENT} },
+    {EID_V_COMMENT, "v_comment", 1, 1, 1, {EID_V_CONTENT} },
     {EID_V_CONTENT, "v_content", 0, 1, 0}
 };
 
